fixing hero image on mobile when held in landscape

--- a/stylesheets/blog_stylesheet.css
+++ b/stylesheets/blog_stylesheet.css
@@ -153,6 +153,11 @@ h3{
 
 /* MEDIA QUERIES */
 
+@media (orientation: landscape) {
+  #welcome-wrapper{
+    min-height: 200!important%
+}
+
 @media screen and (min-width: 550px){
   .six.columns {
     width: 100%!important;
